# Qt_homeworks

10 TCP/PreTCPclient/: mainwindow.cpp  mainwindow.h  mainwindow.ui  tcpclient.cpp  tcpclient.h
11 FinalyWork/: CMakeLists.txt  database.cpp  database.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  myRes.qrc  workload.cpp  workload.h  workload.ui
3 Designer/: CMakeLists.txt  form.cpp  form.h  form.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
4 Widgets/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
5 QTimer/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  stopwatch.cpp  stopwatch.h
6 QtConcurrent/: mainwindow.cpp
7 QTGrafic/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
8 BaseData/: CMakeLists.txt  database.cpp  database.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
9 UDP/: CMakeLists.txt  UdpWorker.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  udpworker.cpp
